<resources>
    <string name="app_name">W+Bility</string>
    <string name="title">W+ \n Bility</string>
    <string name="menu1">택시 운행 현황</string>
    <string name="menu2">버스노선 조회</string>
    <string name="menu3">저상버스 예약</string>
    <string name="menu4">무장애 정류장</string>
    <string name="menu2_1">서구건강체련관</string>
    <string name="menu2_2">유성구종합사회복지관</string>
    <string name="menu2_3">대전장애인총연합회</string>
    <string name="menu3_1">서구 정류장</string>
    <string name="menu3_2">중구 정류장</string>
    <string name="menu3_3">서구 중구 정류장</string>
    <string name="bus_title">버스 정류장 정보</string>
    <string name="place1_1">09:04  보라매삼거리 태원중국집 앞</string>
    <string name="place1_2">09:06  한신아파트 앞</string>
    <string name="place1_3">09:07  백운초 정류장</string>
    <string name="place1_4">09:08  괴정주유소 앞</string>
    <string name="place1_5">09:13  나르메아파트 2단지 117동 앞</string>
    <string name="place1_5_2">13:04  한민시장</string>
    <string name="place1_6">09:17  맑은아침아파트 106동</string>
    <string name="place1_7">09:18  변동오거리 이화산부인과 앞</string>
    <string name="place1_8">09:20  삼정빌딩 한내과 건너편</string>
    <string name="place1_9">09:22  농도원네거리 서림주유소</string>
    <string name="place1_10">09:25  농협 도마동지점</string>
    <string name="place1_11">09:26  서부교육청</string>
    <string name="place1_12">09:27  서부소방서 앞</string>
    <string name="place1_13">09:29  양지맨션 앞 슈퍼</string>
    <string name="place1_14">09:31  경남아파트 6동 앞</string>
    <string name="place1_15">09:33  여성회관 앞</string>
    <string name="place1_16">09:35  기쁜 우리션교회</string>
    <string name="place1_17">09:36  아이사랑 어린이집 앞</string>
    <string name="place1_18">09:37  빙빙축산 정육점 앞</string>
    <string name="place1_19">09:38  린나이 대리점 앞</string>
    <string name="place1_20">09:39  경성큰마을 앞 버스 승강장</string>
    <string name="place1_21">서구건강체련관</string>
    <string name="place1_1_1">12:54  보라매삼거리 태원중국집 앞</string>
    <string name="place1_1_2">12:56  한신아파트 앞</string>
    <string name="place1_1_3">12:58  백운초 정류장</string>
    <string name="place1_1_4">13:00  괴정네거리</string>
    <string name="place1_1_5">13:04  한민시장</string>
    <string name="place1_1_6">13:07  맑은아침아파트 106동</string>
    <string name="place1_1_7">13:09  변동오거리 이화산부인과 앞</string>
    <string name="place1_1_8">13:11  삼정빌딩 한내과 건너편</string>
    <string name="place1_1_9">13:12  농도원네거리 서림주유소</string>
    <string name="place1_1_10">13:14  농협 도마동지점</string>
    <string name="place1_1_11">13:16  서부교육청</string>
    <string name="place1_1_12">13:18  서부소방서 앞</string>
    <string name="place1_1_13">13:20  양지맨션 앞 슈퍼</string>
    <string name="place1_1_14">13:23  경남아파트 6동 앞</string>
    <string name="place1_1_15">13:25  여성회관 앞</string>
    <string name="place1_1_16">13:27  기쁜 우리션교회</string>
    <string name="place1_1_17">13:28  아이사랑 어린이집 앞</string>
    <string name="place1_1_18">13:30  빙빙축산 정육점 앞</string>
    <string name="place1_1_19">13:31  린나이 대리점 앞</string>
    <string name="place1_1_20">13:33  경성큰마을 앞 버스 승강장</string>
    <string name="place1_1_21">서구건강체련관</string>
    <string name="place1_2_1">10:34  우리안과 앞</string>
    <string name="place1_2_2">10:35  갈마2동 주민센터 앞</string>
    <string name="place1_2_3">10:37  내동 코오롱 육교 밑</string>
    <string name="place1_2_4">10:38  롯데 코오롱 상가 앞</string>
    <string name="place1_2_5">10:39  갈마동 공무원아파트 203동 앞</string>
    <string name="place1_2_6">10:41  대전광역시 산림조합 앞</string>
    <string name="place1_2_7">10:43  백년예식장 앞</string>
    <string name="place1_2_8">10:46  갈마농협</string>
    <string name="place1_2_9">10:48  이마트 앞 주유소</string>
    <string name="place1_2_10">10:50  하나로아파트 상가 앞</string>
    <string name="place1_2_11">10:52  서대전고등학교 앞</string>
    <string name="place1_2_12">10:54  월평주공아파트 1단지 상가 앞</string>
    <string name="place1_2_13">10:55  성룡초등학교 앞</string>
    <string name="place1_2_14">10:56  무지개아파트 107동 버스승강장 앞</string>
    <string name="place1_2_15">10:59  둥지아파트 정문 앞</string>
    <string name="place1_2_16">11:01  서원초등학교 정문 앞</string>
    <string name="place1_2_17">11:02  국화아파트 303동 옆앞 공원</string>
    <string name="place1_2_18">11:04  탄방중학교 정문 앞</string>
    <string name="place1_2_19">11:06  한양공작아파트 정문</string>
    <string name="place1_2_20">11:07  한가람아파트 5동 앞</string>
    <string name="place1_2_21">11:09  한우리아파트 건너편</string>
    <string name="place1_2_22">서구건강체련관</string>
    <string name="place2_1">08:25  송강마을 101동 뒤</string>
    <string name="place2_2">08:30  송강그린아파트 앞 횡단보도</string>
    <string name="place2_3">08:38  테크노벨리아파트 502동 버스승강장</string>
    <string name="place2_4">08:39  중일고등학교 정문 앞</string>
    <string name="place2_5">08:50  청구나래아파트 101동 앞</string>
    <string name="place2_6">08:53  세종아파트 105동 옆 도로변</string>
    <string name="place2_7">09:05  세종아파트 111동 앞 승강장</string>
    <string name="place2_8">09:08  신성동 시민천문대 앞</string>
    <string name="place2_9">09:17  유성구청 시내버스승강장</string>
    <string name="place2_10">09:22  궁동 한국기획 앞</string>
    <string name="place2_11">09:28  장대동 로가디스 매장 앞</string>
    <string name="place2_12">09:31  월드컵지하철역(5번출구)</string>
    <string name="place2_13">09:35  노은지하철역(4번출구)</string>
    <string name="place2_14">09:40  유성장애인종합복지관</string>
</resources>