<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout2_1"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@drawable/background_bottom_sheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="50dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:clickable="true"
    android:focusable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/bus_title"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="20sp"  />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <Button
                android:id="@+id/place1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_1"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_2"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_3"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_4"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_5"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_6"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_7"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_8"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_9"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_10"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_11"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_12"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_13"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
            <Button
                android:id="@+id/place14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/place2_14"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp" 
                android:background="@drawable/background_button"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>