<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="25dp">

    <Button
        android:id="@+id/bus_btn4_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/background_btn_2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/menu3_1" />

    <Button
        android:id="@+id/bus_btn4_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/background_btn_2"
        android:text="@string/menu3_2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bus_btn4_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/background_btn_2"
        android:text="@string/menu3_3"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>